v1.0.0/abhilashjosephc.com/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: letsencrypt-ingress-website
 namespace: personal-rnd
 annotations:
  nginx.ingress.kubernetes.io/ssl-redirect: "true"
  nginx.ingress.kubernetes.io/secure-backends: "false"
  nginx.ingress.kubernetes.io/enable-access-log: "false"
  cert-manager.io/cluster-issuer: letsencrypt-issuer
  nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - abhilashjosephc.com
    secretName: letsencrypt-issuer
  rules:
  - host: abhilashjosephc.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: service-personal-website
            port:
              number: 3300
      - pathType: Prefix
        path: "/blog/"
        backend:
          service:
            name: wordpress-blog
            port:
              number: 80
